Fix mobile navigation overlay links display visibility

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -348,7 +348,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .navbar-mobile ul {
-  display: block;
+  display: block !important;
   position: absolute;
   top: 70px;
   right: 20px;
@@ -370,6 +370,10 @@ h1, h2, h3, h4, h5, h6 {
 .navbar-mobile a:focus {
   font-size: 16px;
   color: var(--text-primary);
+}
+
+.navbar-mobile a::before {
+  display: none !important;
 }
 
 .navbar-mobile a:hover,
